static/style.css
:root {
	font-family: monospace;
	color: #000;
	background-color: #f9f4ed;

	@media (prefers-color-scheme: dark) {
		color: #fff;
		background-color: #1e1e1e;
	}
}

body {
	margin: 0;
	padding: 0;
	width: 100vw;
	min-height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

#container {
	margin: 0 auto;
	padding: 4vw 2rem;
	max-width: 64rem;
}

h1 {
	font-size: 2.2rem;
	font-weight: 600;
}

h2 {
	font-size: 1.4rem;
	font-weight: 500;
}

h3 {
	font-size: 1.2rem;
	font-weight: 600;
}

h4 {
	font-size: 1rem;
	font-weight: 500;
}

h5 {
	font-size: 0.9rem;
	font-weight: 400;
}

h6 {
	font-size: 0.8rem;
	font-weight: 400;
}

h4,
h5,
h6 {
	color: #7c7873;

	@media (prefers-color-scheme: dark) {
		color: #aaa;
	}
}

p {
	line-height: 1.4;
}

a {
	position: relative;
	color: #0088ff;
	text-decoration: none;
	transition-property: opacity, color;
	transition-duration: 0.2s;

	@media (prefers-color-scheme: dark) {
		color: #0191fe;
	}

	&::after {
		content: '';
		position: absolute;
		bottom: -2px;
		left: 0;
		width: 100%;
		height: 2px;
		opacity: 0.2;
		background-color: #0088ff;
		transition-property: bottom, height, opacity;
		transition-duration: 0.2s;
		z-index: -1;

		@media (prefers-color-scheme: dark) {
			background-color: #0191fe;
		}
	}

	&:hover {
		color: #fff;

		@media (prefers-color-scheme: dark) {
			color: #fff;
		}

		&::after {
			bottom: 0;
			height: 100%;
			opacity: 1;
		}
	}
}

